; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_sdhci.c_ti_mmchs_read_4.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_sdhci.c_ti_mmchs_read_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_sdhci_softc = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ti_sdhci_softc*, i64)* @ti_mmchs_read_4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ti_mmchs_read_4(%struct.ti_sdhci_softc* %0, i64 %1) #0 {
  %3 = alloca %struct.ti_sdhci_softc*, align 8
  %4 = alloca i64, align 8
  store %struct.ti_sdhci_softc* %0, %struct.ti_sdhci_softc** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.ti_sdhci_softc*, %struct.ti_sdhci_softc** %3, align 8
  %6 = getelementptr inbounds %struct.ti_sdhci_softc, %struct.ti_sdhci_softc* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load %struct.ti_sdhci_softc*, %struct.ti_sdhci_softc** %3, align 8
  %10 = getelementptr inbounds %struct.ti_sdhci_softc, %struct.ti_sdhci_softc* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %8, %11
  %13 = call i32 @bus_read_4(i32 %7, i64 %12)
  ret i32 %13
}

declare dso_local i32 @bus_read_4(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
